--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,13 @@
 {
 	"require" : {
 		"php" : ">=5.3",
-		"mouf/root-container" : "dev-master"
+		"mouf/root-container" : "dev-master",
+		"mouf/root-container-test-subprojectA" : "dev-master",
+		"mouf/root-container-test-subprojectB" : "dev-master"
 	},
+	"require-dev" : {
+		"phpunit/phpunit" : "~3.7"
+	},	
 	"autoload" : {
 		"psr-0" : {
 			"Acme" : "src"
@@ -10,8 +15,20 @@
 	},
 	"minimum-stability" : "dev",
 	"repositories" : [{
-		"type" : "git",
-		"url" : "git@github.com:moufmouf/root-container.git"
-	}
+			"type" : "git",
+			"url" : "git@github.com:moufmouf/root-container.git"
+		},
+		{
+			"type" : "git",
+			"url" : "git@github.com:moufmouf/root-container-test-subprojectA.git"
+		},
+		{
+			"type" : "git",
+			"url" : "git@github.com:moufmouf/root-container-test-subprojectB.git"
+		},
+		{
+			"type" : "git",
+			"url" : "git@github.com:moufmouf/pimple-interop.git"
+		}
 	]
 }
